--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="theme-color" content="#F36422">
   <meta name="desc" content="Andre Christoga is a front-end developer, cool nerd, open source contributor and a Javascript fanboy">
   <meta name="author" content="Andre Christoga">
-  <title>Andre Christoga</title>
+  <title>Projects by Tudor Saitoc</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
     <header class="mdl-layout__header mdl-layout__header--transparent">
       <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title">Andre Christoga</span>
+        <span class="mdl-layout-title">Projects by Tudor Saitoc</span>
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation -->
@@ -29,7 +29,7 @@
       </div>
     </header>
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Andre Christoga</span>
+      <span class="mdl-layout-title">Projects by Tudor Saitoc</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="index.html">Home</a>
         <a class="mdl-navigation__link" href="">About</a>
@@ -61,9 +61,9 @@
               <h4>Python</h4>
             </div>
           </div>
-          <h5>I am available for freelance work <br> You can send me an email to <a href="mailto:andre.christoga@gmail.com" style="color:#fff;">here</a></h5>
+          <h5>I am available for freelance work <br> You can send me an email to <a href="mailto:tudor@saitoc.me" style="color:#fff;">here</a></h5>
           <h5>
-            I currently living at jakarta.
+            Currently residing in New York City.
           </h5>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.7805735632382!2d106.91437185008911!3d-6.16013549551814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698acc410ed719%3A0x87195a50598a8260!2sJl.+Raya+Pegangsaan+Dua%2C+Klp.+Gading%2C+Kota+Jkt+Utara%2C+Daerah+Khusus+Ibukota+Jakarta!5e0!3m2!1sen!2sid!4v1449824427822" width="600" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
         </div>
