--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#F36422">
-  <meta name="desc" content="Andre Christoga is a front-end developer, cool nerd, open source contributor and a Javascript fanboy">
-  <meta name="author" content="Andre Christoga">
-  <title>Andre Christoga</title>
+  <meta name="desc" content="Tudor is a business revenue architect and tech enthusiast">
+  <meta name="author" content="Tudor Saitoc">
+  <title>Projects by Tudor Saitoc</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/material.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
     <header class="mdl-layout__header mdl-layout__header--transparent">
       <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title">Andre Christoga</span>
+        <span class="mdl-layout-title">Projects by Tudor Saitoc</span>
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation -->
@@ -29,37 +29,37 @@
       </div>
     </header>
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Andre Christoga</span>
+      <span class="mdl-layout-title">Projects by Tudor Saitoc</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="">Home</a>
         <a class="mdl-navigation__link" href="about.html">About</a>
-        <a class="mdl-navigation__link" href="/blog">Article</a>
-        <a class="mdl-navigation__link" href="lab.html">Lab</a>
+        <a class="mdl-navigation__link" href="/blog">Blog</a>
+        <a class="mdl-navigation__link" href="lab.html">Projects</a>
       </nav>
     </div>
     <main class="mdl-layout__content">
       <center>
         <div class="header">
-          <img src="img/imac.png" alt="Andre Christoga" class="header-img">
-          <h2>I'm a front-end developer.</h2>
+          <img src="img/imac.png" alt="Tudor Saitoc" class="header-img">
+          <h2>Level up!</h2>
           <h5>
-            Andre Christoga - a front-end developer, cool nerd, open source contributor, Javascript fanboy
+		Don't sit around and watch others succeed... learn how the <b> tudr.co </b> approach can generate results for you
           </h5>
         </div>
         <div class="social">
-          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://facebook.com/andrechristoga" target="_blank">
+          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://facebook.com/tudorsnyc" target="_blank">
             <i class="fa fa-facebook"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://twitter.com/andrechristoga" target="_blank">
+          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://twitter.com/tudorsnyc" target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://plus.google.com/u/0/+AndreChristoga" target="_blank">
+          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://plus.google.com/u/0/+TudorSaitoc" target="_blank">
             <i class="fa fa-google-plus"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://instagram.com/andrechristoga" target="_blank">
+          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://instagram.com/tudorsnyc" target="_blank">
             <i class="fa fa-instagram"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://github.com/christoga" target="_blank">
+          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://github.com/tudr" target="_blank">
             <i class="fa fa-github"></i>
           </a>
         </div>
