--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img src="img/imac.png" alt="Tudor Saitoc" class="header-img">
           <h2>Level up!</h2>
           <h5>
-		Don't sit around and watch others succeed... learn how the <b> tudr.co </b> approach can generate results for you
+		Don't sit around and watch others succeed... learn how <b> tudr.co </b> can help generate results for you and your organization
           </h5>
         </div>
         <div class="social">
@@ -53,7 +53,7 @@
           <a class="mdl-button mdl-js-button mdl-button--icon" href="https://twitter.com/tudorsnyc" target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
-          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://plus.google.com/u/0/+TudorSaitoc" target="_blank">
+          <a class="mdl-button mdl-js-button mdl-button--icon" href="https://plus.google.com/u/0/115412277589967176743" target="_blank">
             <i class="fa fa-google-plus"></i>
           </a>
           <a class="mdl-button mdl-js-button mdl-button--icon" href="https://instagram.com/tudorsnyc" target="_blank">
